--- a/style.css
+++ b/style.css
@@ -495,6 +495,19 @@ body {
 .about-me-main {
     padding-top: 50px; /* Adjust this value to your preference */
 }
+.about-me ul {
+  list-style-type: none; /* Removes default bullet points */
+  padding-left: 0;
+}
+
+.about-me ul li {
+  margin-bottom: 10px; /* Adds space between items */
+  font-size: 16px; /* Adjusts font size */
+}
+
+.about-me ul li strong {
+  font-weight: bold; /* Makes the specialty names bold */
+}
 
     
     
