--- a/style.css
+++ b/style.css
@@ -625,7 +625,7 @@ p {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
   max-width: 1100px;
   margin: 30px auto;
-  font-family: 'Arial', sans-serif;
+  font-family: 'EB Garamond', sans-serif;
   border: 2px solid #e0e0e0;
 }
 
